# SFSpriteEditor-web

./: .eslintrc.js  .gitignore  LICENSE  README.md  index.html  manifest.webmanifest  package.json  registerSW.js  sw.js  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: main.yml
assets/: index.4a1a97f8.js  index.7989aa2f.js  index.8b054d8e.css  vendor.ce0c0ec9.js
lang/: en.json  zh-CN.json
scripts/: compile-lang.js  font.js
src/: app.module.css  app.sass  app.tsx  index.css  index.d.ts  index.sass  main.tsx
src-wasm/: Cargo.toml
src-wasm/examples/: font.rs  graph-preview.rs  hex-font.rs  test.rs
src-wasm/src/: font.rs  gbacolor.rs  lib.rs  sfsprite.rs  utils.rs
src/components/: about-page.tsx  animations-page.module.css  animations-page.tsx  debug-page.tsx  dialog.module.css  dialog.tsx  edit-page.module.css  edit-page.tsx  editor-canvas.module.css  editor-canvas.tsx  file-menu.tsx  file-side-page.module.css  file-side-page.tsx  loading-dialog.module.css  loading-dialog.tsx  options-page.tsx  palettes-page.module.css  palettes-page.tsx  palettes.module.css  palettes.tsx  right-click-menu.module.css  right-click-menu.tsx  sidebar-button.module.css  sidebar-button.tsx  sprites-list.module.css  sprites-list.tsx  subsprite.tsx  switch-palettes-dialog.module.css  switch-palettes-dialog.tsx  tilesets-page.tsx
src/reducers/: dialogs.ts  editing.ts  file.ts  files.ts  index.ts  options.ts  pwa.ts  sprite.ts  tab.ts
src/states/: index.ts  pwa.ts
src/utils/: animation-frame.ts  async-hook.ts  buffer.ts  classname.ts  color.ts  grid-image.ts  (+4 more)
(+10 files in other folders)
